# retail-lakehouse

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  .sops.yaml  CLAUDE.md  CONTEXT.md  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  ruff.toml  taskfile.yml
docs/: deployment.md  domain-service.md  index.md  prerequisites.md  pyproject.toml  troubleshooting-minikube-image-pull.md  troubleshooting-minikube-node-recovery.md  troubleshooting-spark-operator-leader-election.md
docs/adr/: 0001-single-table-aggregate.md  0002-two-lifecycle-classes.md  0003-event-driven-job-run-pipeline.md
docs/argocd/: cli.md  deployment.md  how-it-works.md
docs/catalog-browser/responses/: branches.json  namespaces.json  snapshots.json  table-metadata.json  tables.json  tags.json
docs/cdc/: deployment-debezium-mysql-connector.md  deployment-iceberg-connector.md  deployment-kafka-cluster.md  deployment-mysql.md  overview.md
docs/iceberg/: deployment.md  spark-quickstart.md  table-maintenance.md  troubleshooting-spark-runtime-version.md
docs/iceberg/spark-quickstart/: 1-iceberg-getting-started.ipynb  2-iceberg-integrated-audits-demo.ipynb  3-iceberg-table-maintenance-spark-procedures.ipynb  4-iceberg-wap-with-branches.ipynb  5-iceberg-view-support.ipynb  deployment.md
docs/kafka/: deployment.md  iceberg-sink.md
docs/keda/: concepts.md
docs/minio/: deployment.md  troubleshooting-hostpath-data-recovery.md
docs/observability/: overview.md
docs/observability/opentelemetry/: how-opentelemetry-works.md  opentelemetry-deployment.md  what-is-opentelemetry.md
docs/observability/prometheus/: how-prometheus-works.md  how-thanos-works.md  prometheus-deployment.md  thanos-deployment.md
docs/observability/thanos/: how-thanos-works.md  thanos-deployment.md
docs/polaris/: api.md  deployment.md  permissions.md  troubleshooting-catalog-reset.md
docs/superpowers/plans/: 2026-04-04-table-maintenance-backend.md  2026-04-12-extract-dependencies-module.md  2026-04-18-enable-pydocstyle.md  2026-04-21-catalog-browser.md  2026-04-24-tbl-maint-postgresql-deploy.md  2026-04-25-domain-events.md  2026-04-25-outbox-pattern.md  2026-04-26-backend-directory-restructure.md  2026-04-26-unified-bootstrap-settings.md  2026-04-27-outbound-gateway-structure-guard.md  2026-04-27-outbound-port-adapter-naming-convention.md  2026-04-28-dto-naming-convention.md  2026-04-28-job-run-completion-callback.md  2026-04-28-table-properties-domain-model.md  2026-04-29-polaris-db.md  2026-05-02-trino-mtls-auth.md  2026-05-03-docs-refresh.md  2026-05-03-remove-sops-except-trino.md  2026-07-02-polaris-otel-kafka-events.md
docs/superpowers/specs/: 2026-04-04-table-maintenance-backend-design.md  2026-04-18-enable-pydocstyle-design.md  2026-04-21-catalog-browser-design.md  2026-04-24-tbl-maint-postgresql-deploy-design.md  2026-04-25-core-api-scheduler-restructure-design.md  2026-04-25-domain-events-design.md  2026-04-25-outbox-pattern-design.md  2026-04-26-backend-directory-restructure-design.md  2026-04-26-event-chain-integration-tests-design.md  2026-04-26-k8s-executor-refactoring-design.md  2026-04-26-unified-bootstrap-settings-design.md  2026-04-27-outbound-gateway-structure-guard.md  2026-04-27-outbound-port-adapter-naming-convention.md  2026-04-28-dto-naming-convention-design.md  2026-04-28-job-run-completion-callback-design.md  2026-04-28-table-properties-domain-model-design.md  2026-04-29-polaris-db-design.md  2026-05-02-trino-mtls-auth-design.md  2026-05-03-docs-refresh-design.md  2026-05-03-remove-sops-except-trino-design.md  2026-07-02-polaris-otel-kafka-events-design.md
docs/trino/: catalogs.md  deployment.md  event-listeners.md  faker.md  fault-tolerance.md  fault-tolerant.md  how-it-works.md  https-intro.md  join-optimization.md  monitoring.md  oauth2.md  what-why-when.md
src/table-maintenance/backend/: .dockerignore  .importlinter  Dockerfile  entrypoint.py  main.py  pyproject.toml
src/table-maintenance/backend/api/: __init__.py  main.py
src/table-maintenance/backend/application/: __init__.py  cron_calculator.py  exceptions.py
src/table-maintenance/backend/base/: __init__.py  _inheritance_guard.py  aggregate_root.py  domain_event.py  entity.py  entity_id.py  event_dispatcher.py  event_handler.py  gateway.py  repository.py  store.py  use_case.py  value_object.py
src/table-maintenance/backend/bootstrap/: api.py  messaging.py  scheduler.py
src/table-maintenance/backend/configs/: __init__.py  app.py  base.py  database_backend.py  job_run_executor_adapter.py  job_runs_repo_adapter.py  jobs_repo_adapter.py  jobs_repo_backend.py  k8s_settings.py  postgres_settings.py  sqlite_settings.py
src/table-maintenance/backend/core/: __init__.py
src/table-maintenance/backend/dependencies/: catalog.py  k8s.py  outbox.py  repos.py  settings.py  use_cases.py
src/table-maintenance/backend/k8s/: client.py  jobs_repo.py  manifest.py
src/table-maintenance/backend/models/: __init__.py  job_request.py  job_response.py  job_status.py  requests.py  responses.py
src/table-maintenance/backend/outbox_publisher/: main.py  publisher_loop.py
src/table-maintenance/backend/repos/: __init__.py  base.py  base_jobs_repo.py  exceptions.py  in_memory.py  in_memory_jobs_repo.py  jobs_repo.py  k8s.py  k8s_jobs_repo.py
src/table-maintenance/scheduler/: Dockerfile  main.py  pyproject.toml  scheduler_loop.py
(+1361 files in other folders)
