[project]
name = "retail-lakehouse"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ty>=0.0.27",
]

[tool.uv.workspace]
members = [
    "docs",
    "src/table-maintenance/runtime/spark",
]
