[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "diagrams==0.23.4",
    "mkdocs-drawio-exporter==0.10.1",
    "mkdocs-git-authors-plugin==0.7.2",
    "mkdocs-git-committers-plugin-2==2.2.2",
    "mkdocs-glightbox==0.3.5",
    "mkdocs-jupyter==0.24.8",
    "mkdocs-material[imaging]==9.6.4",
    "mkdocs-monorepo-plugin==1.0.5",
    "mkdocs-slides==0.1.3",
    "neoteroi-mkdocs==1.0.4",
]
