[project]
name = "table-maintenance-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "kubernetes>=32.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "pytest-mock>=3",
    "ty>=0.0.27",
    "import-linter>=2.11",
]

[tool.setuptools.packages.find]
include = ["base*", "shared*", "adapter*", "application*", "dependencies*"]

[tool.ruff.lint.per-file-ignores]
"dependencies/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
