[project]
name = "table-maintenance-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "croniter>=6.0",
    "fastapi[standard]>=0.115",
    "kubernetes>=32.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pyiceberg>=0.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "pytest-mock>=3",
    "ty>=0.0.27",
    "import-linter>=2.11",
]

[tool.setuptools.packages.find]
include = ["base*", "configs*", "adapter*", "application*", "dependencies*", "core*", "api*", "scheduler*"]

[tool.ruff.lint.per-file-ignores]
"dependencies/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
