[project]
name = "table-maintenance-scheduler"
version = "0.1.0"
description = "Scheduler service for Iceberg table maintenance jobs"
requires-python = ">=3.14"
dependencies = [
    "croniter>=6.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../backend"]
